---------------------------------------------------------------------------------------------------
Version: 1.9.8
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.9.7
Date: 2020-11-14
  Changes:
    - Fixed spelling error for ethanol in flamethrower fluids. ethonal -> ethanol
---------------------------------------------------------------------------------------------------
Version: 1.9.6
Date: 2020-11-14
  Changes:
    - Added some pymods fluids to the flamethrower turret.
---------------------------------------------------------------------------------------------------
Version: 1.9.5
Date: 2020-11-11
  Changes:
    - Fixed tholins containers not having the correct fluids set.
    - adjusted oil derrick and tar extractor speeds being way to low.
    - Fixed errors with pypetroleumhandling expecting buildings that are only enabled when pyrawores is active.
---------------------------------------------------------------------------------------------------
Version: 1.9.4
Date: 2020-11-08
  Changes:
    - Added new oil system. Read in-game wiki or locale descriptions to know how to use.
    - Removed tar from stone recipe while pyph is active.
    - Buffed pumpjack production recipes.
    - Rebalanced drilling fluids. Added new drilling fluid (0)
---------------------------------------------------------------------------------------------------
Version: 1.9.3
Date: 2020-11-08
  Changes:
    - Fixed hot-air issue.
---------------------------------------------------------------------------------------------------
Version: 1.9.2
Date: 2020-11-08
  Changes:
    - Fixed the heat exchanger and fusion reactors.
---------------------------------------------------------------------------------------------------
Version: 1.9.1
Date: 2020-11-08
  Changes:
    - Fixed bug in ethylene-glycol when pyrawores isnt active.
    - Added new oil drilling mechanic.