@@ -1,7 +1,7 @@
 {
   "name": "pypetroleumhandling",
   "version": "1.9.8",
-  "factorio_version": "0.18",
+  "factorio_version": "1.1",
   "title": "Pyanodons Petroleum Handling",
   "author": "Pyanodon, Nexela, Kingarthur",
   "contact": "",
