@@ -2,6 +2,8 @@
 Version: 1.9.8
 Date: ????
   Changes:
+    - Updated to factorio version 1.1.
+    - added clay to drilling fluid 1.
 ---------------------------------------------------------------------------------------------------
 Version: 1.9.7
 Date: 2020-11-14
